bibliography cleanup (and shortening)

--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -2,12 +2,11 @@
   author = 	 "A. Bauer",
   title = 	 "The Realizability Approach to Computable Analysis and Topology",
   school = 	 "Carnegie Mellon University",
-  year = 	 "2000",
-  note =	 "Available as CMU technical report \texttt{CMU-CS-00-164} and at \texttt{http://andrej.com/thesis}"
+  year = 	 "2000"
 }
 
 @article{KleeneSC:intint,
-  author="Kleene, S.C.",
+  author="S. C. Kleene",
   title="On the Interpretation of Intuitionistic Number Theory",
   year=1945,
   journal={Journal of Symbolic Logic},
@@ -17,7 +16,7 @@
 }
 		  
 @inproceedings{HylandJ:efft,
-   author =   {J.M.E. Hyland},
+   author =   {J. M. E. Hyland},
    title =    {The effective topos},
    pages =    {165-216},
    editor =   {A.S. Troelstra and D. Van Dalen},
@@ -27,7 +26,7 @@
 }
 
 @inproceedings{TroelstraA:rea,
-  author="Troelstra, A.S.",
+  author="A. S. Troelstra",
   title="Realizability",
   year=1998,
   booktitle="Handbook of Proof Theory",
@@ -37,7 +36,7 @@
  }
 
 @phdthesis{McCartyD:reaarm,
-   author =  {D.C. McCarty},
+   author =  {D. C. McCarty},
    title =   {Realizability and Recursive Mathematics},
    year =    1984,
    school =  {University of Oxford},
@@ -61,7 +60,7 @@
 }
 
 @article{HylandJ:trit,
-   author =  {J.M.E. Hyland and P.T. Johnstone and A.M. Pitts},
+   author =  {J. M. E. Hyland and P. T. Johnstone and A. M. Pitts},
    title =   {Tripos Theory},
    journal = {Math. Proc. Camb. Phil. Soc.},
    year =    1980,
@@ -105,7 +104,7 @@ YEAR=2003,
 KEY="Peyton Jones"}
 
 @Book{Troelstra:van-Dalen:88:1,
-  author = 	 {A.S. Troelstra and D. van Dalen},
+  author = 	 {A. S. Troelstra and D. van Dalen},
   title = 	 {Constructivism in Mathematics, An Introduction, Vol. 1},
   publisher = 	 {North-Holland},
   year = 	 {1988},
@@ -114,7 +113,7 @@ KEY="Peyton Jones"}
 }
 
 @Book{Troelstra:van-Dalen:88:2,
-  author = 	 {A.S. Troelstra and D. van Dalen},
+  author = 	 {A. S. Troelstra and D. van Dalen},
   title = 	 {Constructivism in Mathematics, An Introduction, Vol. 2},
   publisher = 	 {North-Holland},
   year = 	 {1988},
@@ -142,7 +141,7 @@ KEY="Peyton Jones"}
   year = "1995"}
 
 @Book{Wei00,
-  author = {Weihrauch, Klaus},
+  author = {Klaus Weihrauch},
   title = {Computable Analysis},
   year = {2000},
   publisher = {Springer},
@@ -150,7 +149,7 @@ KEY="Peyton Jones"}
 }
 
 @Article{Bla97,
-  author = {Blanck, Jens},
+  author = {Jens Blanck},
   title = {Domain representability of metric spaces},
   journal = {Annals of Pure and Applied Logic},
   year = {1997},
@@ -159,7 +158,7 @@ KEY="Peyton Jones"}
 }
 
 @InProceedings{TZ98,
-  author = {Tucker, J.V. and Zucker, J.I.},
+  author = {J.V. Tucker and J. I. Zucker},
   title = {Computable Functions and Semicomputable Sets on Many-Sorted
   Algebras},
   booktitle = {Handbook of Logic in Computer Science, Volume 5},
@@ -170,47 +169,34 @@ KEY="Peyton Jones"}
 }
 
 @InProceedings{EL00,
-  author = {Edalat, Abbas and Lieutier, Andr\'{e}},
+  author = {Abbas Edalat and Andr\'{e} Lieutier},
   title = {Domain of Differentiable Functions},
   booktitle = {Computability and Complexity in Analysis},
   editor = {Blanck, Jens and Brattka, Vasco and Hertling, Peter and Weihrauch,
   Klaus},
   year = {2000},
-  month = {September},
-  series = {Informatik Berichte},
-  volume = {272},
-  pages = {79},
-  publisher = {FernUniversit\"at Hagen},
   note = {CCA2000 Workshop, Swansea, Wales, September 17--19, 2000}
 }
 
 @InProceedings{Mue00,
-  author = {M{\"u}ller, Norbert Th.},
+  author = {Norbert M{\"u}ller},
   title = {The {iRRAM}: Exact Arithmetic in {C}++},
   booktitle = {Computability and Complexity in Analysis},
   editor = {Blanck, Jens and Brattka, Vasco and Hertling, Peter and Weihrauch,
   Klaus},
   year = {2000},
-  month = {September},
-  series = {Informatik Berichte},
-  volume = {272},
   pages = {319--350},
-  publisher = {FernUniversit\"at Hagen},
   note = {CCA2000 Workshop, Swansea, Wales, September 17--19, 2000}
 }
 
 @InProceedings{Lam05a,
-  author = {Lambov, Branimir},
+  author = {Branimir Lambov},
   title = {{RealLib}: an efficient implementation of Exact Real Arithmetic},
   booktitle = {Computability and Complexity in Analysis},
   editor = {Grubba, Tanja and Hertling, Peter and Tsuiki, Hideki and Weihrauch,
   Klaus},
   year = {2005},
-  month = {July},
-  series = {Informatik Berichte},
-  volume = {326},
   pages = {169--175},
-  publisher = {FernUniversit\"at in Hagen},
   note = {Proccedings, Second International Conference, CCA 2005, Kyoto, Japan,
   August 25--29, 2005}
 }
@@ -225,7 +211,7 @@ KEY="Peyton Jones"}
 }
 
 @book{KleeneSC:fouim,
-  author="Kleene, S.C. and Vesley, R.E.",
+  author="S. C. Kleene and R. E. Vesley",
   title="The Foundations of Intuitionistic Mathematics, 
 			especially in relation to recursive functions",
   year=1965,
@@ -242,7 +228,7 @@ KEY="Peyton Jones"}
 }
 		  
 @Article{Bauer:Birkedal:Scott:98,
-  author =	 "A. Bauer and L. Birkedal and D.S. Scott",
+  author =	 "A. Bauer and L. Birkedal and D. S. Scott",
   title = 	 "Equilogical Spaces",
   journal =	 "Theoretical Computer Science",
   year =	 2004,
@@ -252,7 +238,7 @@ KEY="Peyton Jones"}
 }  
 
 @PhdThesis{Bla97a,
-  author = {Blanck, Jens},
+  author = {Jens Blanck},
   title = {Computability on topological spaces by effective domain
   representations},
   year = {1997},
@@ -261,7 +247,7 @@ KEY="Peyton Jones"}
 }
 
 @article{ScottD:dattl,
-   author =  {D.S. Scott},
+   author =  {D. S. Scott},
    title =   {Data Types as Lattices},
    journal = {SIAM Journal of Computing},
    year =    1976,
@@ -272,14 +258,11 @@ KEY="Peyton Jones"}
 
 
 @Book{ershov98:_handb_recur_mathem,
-  editor =	 {Ershov, Yu. L. and Goncharov, S.S. and Nerode, A. and Remmel, J.B.},
+  editor =	 {Yu. L. Ershov and S. S. Goncharov and A. Nerode and J. B. Remmel},
   title = 	 {Handbook of Recursive Mathematics},
   publisher = 	 {Elsevier},
   year = 	 1998,
-  volume =	 139,
-  series =	 {Studies in Logic and The Foundations of Mathematics},
-  address =	 {Amsterdam},
-  note =	 {Volume 2, Recursive Algebra, Analysis and Combinatorics}
+  address =	 {Amsterdam}
 }
 
 @book{coqart,
@@ -290,7 +273,7 @@ KEY="Peyton Jones"}
 	}
 
 @Article{post47:_recur_unsol_probl_thue,
-  author = 	 {Post, E.},
+  author = 	 {E. Post},
   title = 	 {Recursive Unsolvability of a Problem of Thue},
   journal = 	 {The Journal of Symbolic Logic},
   year = 	 1947,
@@ -360,7 +343,7 @@ KEY="Peyton Jones"}
 
 
 @PhdThesis{escardo97:_pcf,
-  author = 	 {Escard\'o, M.H.},
+  author = 	 {M. H. Escard\'o},
   title = 	 {{PCF} extended with real numbers},
   school = 	 {Department of Computer Science, University of Edinburgh},
   year = 	 1997,
@@ -368,7 +351,7 @@ KEY="Peyton Jones"}
 }
 
 @InProceedings{marcial-romero04:_seman,
-  author = 	 {J.R. Marcial-Romero and M.H. Escard{\'o}},
+  author = 	 {J. R. Marcial-Romero and M. H. Escard{\'o}},
   title = 	 {Semantics of a sequential language for exact real-number computation},
   booktitle = 	 {Proceedings of the 19th Annual IEEE Symposium on Logic in Computer Science},
   pages =	 {426--435},
@@ -377,7 +360,7 @@ KEY="Peyton Jones"}
 }
 
 @Book{borodin75,
-  author =	 {A. Borodin and J.I. Monro},
+  author =	 {A. Borodin and J. I. Monro},
   title = 	 {The computational complexity of algebraic and numeric problems},
   publisher = 	 {New York, London, Amsterdam : American Elsevier},
   year = 	 1975,
@@ -386,14 +369,14 @@ KEY="Peyton Jones"}
 }
 
 @Book{nordstroem90:_progr_martin_type_theor,
-  author =	 {B. Nordstr{\"o}m and K. Petersson and J.M. Smith},
+  author =	 {B. Nordstr{\"o}m and K. Petersson and J. M. Smith},
   title = 	 {Programming in Martin-L{\"of}'s Type Theory},
   publisher = 	 {Oxford University Press},
   year = 	 1990
 }
 
 @BOOK{JacobsB:cltt,
- author = "Jacobs, B.",
+ author = "B. Jacobs",
  title = "Categorical Logic and Type Theory",
  publisher = "Elsevier Science",
  year = 1999
