--- a/doc/cie/comparison.tex
+++ b/doc/cie/comparison.tex
@@ -61,7 +61,7 @@ theoretical studies of computability.
 
 \iflong
 Other approaches are based on programming languages augmented with
-datatypes for real numbers~\cite{Escardo:97,marcial-romero04:_seman}
+datatypes for real numbers~\cite{escardo97:_pcf,marcial-romero04:_seman}
 and topological algebras~\cite{TZ98}, or machine models augmented with
 (suitably chosen subsets of) real numbers such as Real
 RAM~\cite{borodin75}, the Blum-Smale-Shub
