--- a/doc/cie/specifications.tex
+++ b/doc/cie/specifications.tex
@@ -185,7 +185,7 @@ also introduce the propositional case
 %
 which is read ``if $\oe$ is of the form $\oinj{\ol_i}{\ox_i}$ then
 $\op_i$ holds $(i = 1, \ldots, n)$'', with the understanding that the
-expression is false if $\oe$ fails to match all the cases. This can be
+expression is false if $\oe$ does not match any case. This can be
 expressed with the negative formula
 %
 \begin{multline*}
