--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -214,9 +214,9 @@
 \newcommand{\oproj}[2]{\mathtt{p}_{#2}\,#1} % projection
 \newcommand{\oinj}[2]{`#1\,#2} % sum injection
 \newcommand{\oinjx}[1]{`#1} % sum injection
-\newcommand{\omatch}[7]{\mathtt{match}\,#1\,\mathtt{with}\,\oinj{#2}{#3}\to{#4}\obar\oinj{#5}{#6}\to{#7}}
-\newcommand{\omatchx}[5]{\mathtt{match}\,#1\,\mathtt{with}\,\oinjx{#2}\to{#3}\obar\oinjx{#4}\to{#5}}
-\newcommand{\omatches}[7]{\mathtt{match}\,#1\,\mathtt{with}\,\oinj{#2}{#3}\to{#4}\,|\cdots\,|\oinj{#5}{#6}\to{#7}}
+\newcommand{\omatch}[7]{\mathtt{match}\;#1\;\mathtt{with}\,\oinj{#2}{#3}\to{#4}\obar\oinj{#5}{#6}\to{#7}}
+\newcommand{\omatchx}[5]{\mathtt{match}\;#1\;\mathtt{with}\,\oinjx{#2}\to{#3}\obar\oinjx{#4}\to{#5}}
+\newcommand{\omatches}[7]{\mathtt{match}\;#1\;\mathtt{with}\,\oinj{#2}{#3}\to{#4}\,|\cdots\,|\oinj{#5}{#6}\to{#7}}
 \newcommand{\ooblig}[4]{\mathtt{assure}\,#1{:}#2.\,#3\,\mathtt{in}\,#4}
 \newcommand{\oobligx}[2]{\mathtt{assure}\,#1\,\mathtt{in}\,#2}
 \newcommand{\olet}[3]{\mathtt{let}\,#1{=}#2\,\mathtt{in}\,#3}
@@ -229,9 +229,9 @@
 \newcommand{\oand}[2]{#1 \land #2} % and
 \newcommand{\oimply}[2]{#1 \Rightarrow #2} % imply
 \newcommand{\oiff}[2]{#1 \Leftrightarrow #2} % iff
-\newcommand{\opcase}[7]{\mathtt{match}\,#1\,\mathtt{with}\,\oinj{#2}{#3}{\Rightarrow}{#4}\,|\,\oinj{#5}{#6}\Rightarrow{#7}}
-\newcommand{\opcasex}[5]{\mathtt{match}\,#1\,\mathtt{with}\,\oinjx{#2}{\Rightarrow}{#3}\,|\,\oinjx{#4}\Rightarrow{#5}}
-\newcommand{\opcases}[7]{\mathtt{match}\,#1\,\mathtt{with}\,\oinj{#2}{#3}\Rightarrow{#4}\,|\cdots\,|\oinj{#5}{#6}\Rightarrow{#7}}
+\newcommand{\opcase}[7]{\mathtt{match}\;#1\;\mathtt{with}\,\oinj{#2}{#3}{\Rightarrow}{#4}\,|\,\oinj{#5}{#6}\Rightarrow{#7}}
+\newcommand{\opcasex}[5]{\mathtt{match}\;#1\;\mathtt{with}\,\oinjx{#2}{\Rightarrow}{#3}\,|\,\oinjx{#4}\Rightarrow{#5}}
+\newcommand{\opcases}[7]{\mathtt{match}\;#1\;\mathtt{with}\,\oinj{#2}{#3}\Rightarrow{#4}\,|\cdots\,|\oinj{#5}{#6}\Rightarrow{#7}}
 \newcommand{\ototal}[2]{#1{:}\support{#2}} % support membership
 \newcommand{\oper}[3]{#2\,{\approx_{#1}}\,#3} % per
 \newcommand{\oequal}[2]{#1{=}#2} % observational equality
