--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -21,9 +21,9 @@
 % To distinguish between the long and short version
 \newif\iflong
 % Uncommment this for short version:
-%\longfalse
+\longfalse
 % Uncomment this for long version:
-\longtrue
+%\longtrue
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -112,6 +112,10 @@ By using the realizability
   proofs, but allows any implementation method, from handwritten code to code extracted from
   proofs by other tools.
 \end{abstract}
+
+\begin{center}
+  Version of \today.
+\end{center}
 
 \input{introduction.tex}
 \input{modest_sets.tex}
