--- a/private/cie/cie.tex
+++ b/private/cie/cie.tex
@@ -21,9 +21,9 @@
 % To distinguish between the long and short version
 \newif\iflong
 % Uncommment this for short version:
-\longfalse
+%\longfalse
 % Uncomment this for long version:
-%\longtrue
+\longtrue
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
