minor updates to the long version

--- a/private/cie/logic.tex
+++ b/private/cie/logic.tex
@@ -112,7 +112,7 @@ Following Sannella, Sokolowski, and
 Tarlecki\footnote{``parameterized (program specification) $\neq$ (parameterized program) specification''}~\cite{sannella92:_towar} RZ supports two forms of parameterization.  A theory of a parameterized implementation
 $\idarrow{\iM}{\ith_1}{\ith_2}$ describes a uniform family of models (i.e.,
 a single implementation; a functor in OCaml) that maps every
-model~$\im$ satisfying~$\ith_1$ to a model of~$\ith_2$.  In contrast,
+model~$\iM$ satisfying~$\ith_1$ to a model of~$\ith_2$.  In contrast,
 a theory $\ilambda{\iM}{\ith_1}{\ith_2}$
 maps models to theories; if $\iTH$ is such a theory, then
 $\iTH(\im_1)$ and $\iTH(\im_2)$ are theories whose implementations might be completely unrelated.\footnote{
