--- a/private/cie/modest_sets.tex
+++ b/private/cie/modest_sets.tex
@@ -51,9 +51,7 @@ there would be representation invariants and conditions not expressed by the typ
 \begin{enumerate}
 \item The order in which vertices and arrows are listed is not
   important%
-; for example, $[1;2;3;4]$ and $[4;1;2;3]$ represent the same vertices.\footnote{
-  A different implementation with the same representation type could require
-  that only sorted vertex lists are legal.}
+; for example, $[1;2;3;4]$ and $[4;1;2;3]$ represent the same vertices.
 \item Each vertex and arrow must be listed exactly once.
 \item The source and target of each arrow must appear in the list of vertices.
 \end{enumerate}
@@ -330,7 +328,7 @@ realized by infinite Cauchy sequences).
 %
 \iflong
 %
-There is no presupposition that this equivalence is computable
+There is no presupposition that pers are computable
 (implementable). We can require decidable equivalence by adding a
 suitable axiom; see Section~\ref{sec:decidable-sets}. \fi
 
